// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gilded Rose should foo 1`] = `
Item {
  "name": "foo",
  "quality": 0,
  "sellIn": -2,
}
`;

exports[`Gilded Rose should foo 2`] = `
Item {
  "name": "foo",
  "quality": 0,
  "sellIn": -2,
}
`;

exports[`Gilded Rose should foo 3`] = `
Item {
  "name": "foo",
  "quality": 47,
  "sellIn": -2,
}
`;

exports[`Gilded Rose should foo 4`] = `
Item {
  "name": "foo",
  "quality": 48,
  "sellIn": -2,
}
`;

exports[`Gilded Rose should foo 5`] = `
Item {
  "name": "foo",
  "quality": 49,
  "sellIn": -2,
}
`;

exports[`Gilded Rose should foo 6`] = `
Item {
  "name": "foo",
  "quality": 0,
  "sellIn": -1,
}
`;

exports[`Gilded Rose should foo 7`] = `
Item {
  "name": "foo",
  "quality": 0,
  "sellIn": -1,
}
`;

exports[`Gilded Rose should foo 8`] = `
Item {
  "name": "foo",
  "quality": 47,
  "sellIn": -1,
}
`;

exports[`Gilded Rose should foo 9`] = `
Item {
  "name": "foo",
  "quality": 48,
  "sellIn": -1,
}
`;

exports[`Gilded Rose should foo 10`] = `
Item {
  "name": "foo",
  "quality": 49,
  "sellIn": -1,
}
`;

exports[`Gilded Rose should foo 11`] = `
Item {
  "name": "foo",
  "quality": 0,
  "sellIn": 0,
}
`;

exports[`Gilded Rose should foo 12`] = `
Item {
  "name": "foo",
  "quality": 0,
  "sellIn": 0,
}
`;

exports[`Gilded Rose should foo 13`] = `
Item {
  "name": "foo",
  "quality": 48,
  "sellIn": 0,
}
`;

exports[`Gilded Rose should foo 14`] = `
Item {
  "name": "foo",
  "quality": 49,
  "sellIn": 0,
}
`;

exports[`Gilded Rose should foo 15`] = `
Item {
  "name": "foo",
  "quality": 50,
  "sellIn": 0,
}
`;

exports[`Gilded Rose should foo 16`] = `
Item {
  "name": "foo",
  "quality": 0,
  "sellIn": 4,
}
`;

exports[`Gilded Rose should foo 17`] = `
Item {
  "name": "foo",
  "quality": 0,
  "sellIn": 4,
}
`;

exports[`Gilded Rose should foo 18`] = `
Item {
  "name": "foo",
  "quality": 48,
  "sellIn": 4,
}
`;

exports[`Gilded Rose should foo 19`] = `
Item {
  "name": "foo",
  "quality": 49,
  "sellIn": 4,
}
`;

exports[`Gilded Rose should foo 20`] = `
Item {
  "name": "foo",
  "quality": 50,
  "sellIn": 4,
}
`;

exports[`Gilded Rose should foo 21`] = `
Item {
  "name": "foo",
  "quality": 0,
  "sellIn": 5,
}
`;

exports[`Gilded Rose should foo 22`] = `
Item {
  "name": "foo",
  "quality": 0,
  "sellIn": 5,
}
`;

exports[`Gilded Rose should foo 23`] = `
Item {
  "name": "foo",
  "quality": 48,
  "sellIn": 5,
}
`;

exports[`Gilded Rose should foo 24`] = `
Item {
  "name": "foo",
  "quality": 49,
  "sellIn": 5,
}
`;

exports[`Gilded Rose should foo 25`] = `
Item {
  "name": "foo",
  "quality": 50,
  "sellIn": 5,
}
`;

exports[`Gilded Rose should foo 26`] = `
Item {
  "name": "foo",
  "quality": 0,
  "sellIn": 6,
}
`;

exports[`Gilded Rose should foo 27`] = `
Item {
  "name": "foo",
  "quality": 0,
  "sellIn": 6,
}
`;

exports[`Gilded Rose should foo 28`] = `
Item {
  "name": "foo",
  "quality": 48,
  "sellIn": 6,
}
`;

exports[`Gilded Rose should foo 29`] = `
Item {
  "name": "foo",
  "quality": 49,
  "sellIn": 6,
}
`;

exports[`Gilded Rose should foo 30`] = `
Item {
  "name": "foo",
  "quality": 50,
  "sellIn": 6,
}
`;

exports[`Gilded Rose should foo 31`] = `
Item {
  "name": "foo",
  "quality": 0,
  "sellIn": 9,
}
`;

exports[`Gilded Rose should foo 32`] = `
Item {
  "name": "foo",
  "quality": 0,
  "sellIn": 9,
}
`;

exports[`Gilded Rose should foo 33`] = `
Item {
  "name": "foo",
  "quality": 48,
  "sellIn": 9,
}
`;

exports[`Gilded Rose should foo 34`] = `
Item {
  "name": "foo",
  "quality": 49,
  "sellIn": 9,
}
`;

exports[`Gilded Rose should foo 35`] = `
Item {
  "name": "foo",
  "quality": 50,
  "sellIn": 9,
}
`;

exports[`Gilded Rose should foo 36`] = `
Item {
  "name": "foo",
  "quality": 0,
  "sellIn": 10,
}
`;

exports[`Gilded Rose should foo 37`] = `
Item {
  "name": "foo",
  "quality": 0,
  "sellIn": 10,
}
`;

exports[`Gilded Rose should foo 38`] = `
Item {
  "name": "foo",
  "quality": 48,
  "sellIn": 10,
}
`;

exports[`Gilded Rose should foo 39`] = `
Item {
  "name": "foo",
  "quality": 49,
  "sellIn": 10,
}
`;

exports[`Gilded Rose should foo 40`] = `
Item {
  "name": "foo",
  "quality": 50,
  "sellIn": 10,
}
`;

exports[`Gilded Rose should foo 41`] = `
Item {
  "name": "foo",
  "quality": 0,
  "sellIn": 11,
}
`;

exports[`Gilded Rose should foo 42`] = `
Item {
  "name": "foo",
  "quality": 0,
  "sellIn": 11,
}
`;

exports[`Gilded Rose should foo 43`] = `
Item {
  "name": "foo",
  "quality": 48,
  "sellIn": 11,
}
`;

exports[`Gilded Rose should foo 44`] = `
Item {
  "name": "foo",
  "quality": 49,
  "sellIn": 11,
}
`;

exports[`Gilded Rose should foo 45`] = `
Item {
  "name": "foo",
  "quality": 50,
  "sellIn": 11,
}
`;

exports[`Gilded Rose should foo 46`] = `
Item {
  "name": "Aged Brie",
  "quality": 2,
  "sellIn": -2,
}
`;

exports[`Gilded Rose should foo 47`] = `
Item {
  "name": "Aged Brie",
  "quality": 3,
  "sellIn": -2,
}
`;

exports[`Gilded Rose should foo 48`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": -2,
}
`;

exports[`Gilded Rose should foo 49`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": -2,
}
`;

exports[`Gilded Rose should foo 50`] = `
Item {
  "name": "Aged Brie",
  "quality": 51,
  "sellIn": -2,
}
`;

exports[`Gilded Rose should foo 51`] = `
Item {
  "name": "Aged Brie",
  "quality": 2,
  "sellIn": -1,
}
`;

exports[`Gilded Rose should foo 52`] = `
Item {
  "name": "Aged Brie",
  "quality": 3,
  "sellIn": -1,
}
`;

exports[`Gilded Rose should foo 53`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": -1,
}
`;

exports[`Gilded Rose should foo 54`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": -1,
}
`;

exports[`Gilded Rose should foo 55`] = `
Item {
  "name": "Aged Brie",
  "quality": 51,
  "sellIn": -1,
}
`;

exports[`Gilded Rose should foo 56`] = `
Item {
  "name": "Aged Brie",
  "quality": 1,
  "sellIn": 0,
}
`;

exports[`Gilded Rose should foo 57`] = `
Item {
  "name": "Aged Brie",
  "quality": 2,
  "sellIn": 0,
}
`;

exports[`Gilded Rose should foo 58`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 0,
}
`;

exports[`Gilded Rose should foo 59`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 0,
}
`;

exports[`Gilded Rose should foo 60`] = `
Item {
  "name": "Aged Brie",
  "quality": 51,
  "sellIn": 0,
}
`;

exports[`Gilded Rose should foo 61`] = `
Item {
  "name": "Aged Brie",
  "quality": 1,
  "sellIn": 4,
}
`;

exports[`Gilded Rose should foo 62`] = `
Item {
  "name": "Aged Brie",
  "quality": 2,
  "sellIn": 4,
}
`;

exports[`Gilded Rose should foo 63`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 4,
}
`;

exports[`Gilded Rose should foo 64`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 4,
}
`;

exports[`Gilded Rose should foo 65`] = `
Item {
  "name": "Aged Brie",
  "quality": 51,
  "sellIn": 4,
}
`;

exports[`Gilded Rose should foo 66`] = `
Item {
  "name": "Aged Brie",
  "quality": 1,
  "sellIn": 5,
}
`;

exports[`Gilded Rose should foo 67`] = `
Item {
  "name": "Aged Brie",
  "quality": 2,
  "sellIn": 5,
}
`;

exports[`Gilded Rose should foo 68`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 5,
}
`;

exports[`Gilded Rose should foo 69`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 5,
}
`;

exports[`Gilded Rose should foo 70`] = `
Item {
  "name": "Aged Brie",
  "quality": 51,
  "sellIn": 5,
}
`;

exports[`Gilded Rose should foo 71`] = `
Item {
  "name": "Aged Brie",
  "quality": 1,
  "sellIn": 6,
}
`;

exports[`Gilded Rose should foo 72`] = `
Item {
  "name": "Aged Brie",
  "quality": 2,
  "sellIn": 6,
}
`;

exports[`Gilded Rose should foo 73`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 6,
}
`;

exports[`Gilded Rose should foo 74`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 6,
}
`;

exports[`Gilded Rose should foo 75`] = `
Item {
  "name": "Aged Brie",
  "quality": 51,
  "sellIn": 6,
}
`;

exports[`Gilded Rose should foo 76`] = `
Item {
  "name": "Aged Brie",
  "quality": 1,
  "sellIn": 9,
}
`;

exports[`Gilded Rose should foo 77`] = `
Item {
  "name": "Aged Brie",
  "quality": 2,
  "sellIn": 9,
}
`;

exports[`Gilded Rose should foo 78`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 9,
}
`;

exports[`Gilded Rose should foo 79`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 9,
}
`;

exports[`Gilded Rose should foo 80`] = `
Item {
  "name": "Aged Brie",
  "quality": 51,
  "sellIn": 9,
}
`;

exports[`Gilded Rose should foo 81`] = `
Item {
  "name": "Aged Brie",
  "quality": 1,
  "sellIn": 10,
}
`;

exports[`Gilded Rose should foo 82`] = `
Item {
  "name": "Aged Brie",
  "quality": 2,
  "sellIn": 10,
}
`;

exports[`Gilded Rose should foo 83`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 10,
}
`;

exports[`Gilded Rose should foo 84`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 10,
}
`;

exports[`Gilded Rose should foo 85`] = `
Item {
  "name": "Aged Brie",
  "quality": 51,
  "sellIn": 10,
}
`;

exports[`Gilded Rose should foo 86`] = `
Item {
  "name": "Aged Brie",
  "quality": 1,
  "sellIn": 11,
}
`;

exports[`Gilded Rose should foo 87`] = `
Item {
  "name": "Aged Brie",
  "quality": 2,
  "sellIn": 11,
}
`;

exports[`Gilded Rose should foo 88`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 11,
}
`;

exports[`Gilded Rose should foo 89`] = `
Item {
  "name": "Aged Brie",
  "quality": 50,
  "sellIn": 11,
}
`;

exports[`Gilded Rose should foo 90`] = `
Item {
  "name": "Aged Brie",
  "quality": 51,
  "sellIn": 11,
}
`;

exports[`Gilded Rose should foo 91`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 0,
  "sellIn": -2,
}
`;

exports[`Gilded Rose should foo 92`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 0,
  "sellIn": -2,
}
`;

exports[`Gilded Rose should foo 93`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 0,
  "sellIn": -2,
}
`;

exports[`Gilded Rose should foo 94`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 0,
  "sellIn": -2,
}
`;

exports[`Gilded Rose should foo 95`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 0,
  "sellIn": -2,
}
`;

exports[`Gilded Rose should foo 96`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 0,
  "sellIn": -1,
}
`;

exports[`Gilded Rose should foo 97`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 0,
  "sellIn": -1,
}
`;

exports[`Gilded Rose should foo 98`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 0,
  "sellIn": -1,
}
`;

exports[`Gilded Rose should foo 99`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 0,
  "sellIn": -1,
}
`;

exports[`Gilded Rose should foo 100`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 0,
  "sellIn": -1,
}
`;

exports[`Gilded Rose should foo 101`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 3,
  "sellIn": 0,
}
`;

exports[`Gilded Rose should foo 102`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 4,
  "sellIn": 0,
}
`;

exports[`Gilded Rose should foo 103`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 0,
}
`;

exports[`Gilded Rose should foo 104`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 0,
}
`;

exports[`Gilded Rose should foo 105`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 51,
  "sellIn": 0,
}
`;

exports[`Gilded Rose should foo 106`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 3,
  "sellIn": 4,
}
`;

exports[`Gilded Rose should foo 107`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 4,
  "sellIn": 4,
}
`;

exports[`Gilded Rose should foo 108`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 4,
}
`;

exports[`Gilded Rose should foo 109`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 4,
}
`;

exports[`Gilded Rose should foo 110`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 51,
  "sellIn": 4,
}
`;

exports[`Gilded Rose should foo 111`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 2,
  "sellIn": 5,
}
`;

exports[`Gilded Rose should foo 112`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 3,
  "sellIn": 5,
}
`;

exports[`Gilded Rose should foo 113`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 5,
}
`;

exports[`Gilded Rose should foo 114`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 5,
}
`;

exports[`Gilded Rose should foo 115`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 51,
  "sellIn": 5,
}
`;

exports[`Gilded Rose should foo 116`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 2,
  "sellIn": 6,
}
`;

exports[`Gilded Rose should foo 117`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 3,
  "sellIn": 6,
}
`;

exports[`Gilded Rose should foo 118`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 6,
}
`;

exports[`Gilded Rose should foo 119`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 6,
}
`;

exports[`Gilded Rose should foo 120`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 51,
  "sellIn": 6,
}
`;

exports[`Gilded Rose should foo 121`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 2,
  "sellIn": 9,
}
`;

exports[`Gilded Rose should foo 122`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 3,
  "sellIn": 9,
}
`;

exports[`Gilded Rose should foo 123`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 9,
}
`;

exports[`Gilded Rose should foo 124`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 9,
}
`;

exports[`Gilded Rose should foo 125`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 51,
  "sellIn": 9,
}
`;

exports[`Gilded Rose should foo 126`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 1,
  "sellIn": 10,
}
`;

exports[`Gilded Rose should foo 127`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 2,
  "sellIn": 10,
}
`;

exports[`Gilded Rose should foo 128`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 10,
}
`;

exports[`Gilded Rose should foo 129`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 10,
}
`;

exports[`Gilded Rose should foo 130`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 51,
  "sellIn": 10,
}
`;

exports[`Gilded Rose should foo 131`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 1,
  "sellIn": 11,
}
`;

exports[`Gilded Rose should foo 132`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 2,
  "sellIn": 11,
}
`;

exports[`Gilded Rose should foo 133`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 11,
}
`;

exports[`Gilded Rose should foo 134`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 50,
  "sellIn": 11,
}
`;

exports[`Gilded Rose should foo 135`] = `
Item {
  "name": "Backstage passes to a TAFKAL80ETC concert",
  "quality": 51,
  "sellIn": 11,
}
`;

exports[`Gilded Rose should foo 136`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 0,
  "sellIn": -1,
}
`;

exports[`Gilded Rose should foo 137`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 1,
  "sellIn": -1,
}
`;

exports[`Gilded Rose should foo 138`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 49,
  "sellIn": -1,
}
`;

exports[`Gilded Rose should foo 139`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 50,
  "sellIn": -1,
}
`;

exports[`Gilded Rose should foo 140`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 51,
  "sellIn": -1,
}
`;

exports[`Gilded Rose should foo 141`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 0,
  "sellIn": 0,
}
`;

exports[`Gilded Rose should foo 142`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 1,
  "sellIn": 0,
}
`;

exports[`Gilded Rose should foo 143`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 49,
  "sellIn": 0,
}
`;

exports[`Gilded Rose should foo 144`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 50,
  "sellIn": 0,
}
`;

exports[`Gilded Rose should foo 145`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 51,
  "sellIn": 0,
}
`;

exports[`Gilded Rose should foo 146`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 0,
  "sellIn": 1,
}
`;

exports[`Gilded Rose should foo 147`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 1,
  "sellIn": 1,
}
`;

exports[`Gilded Rose should foo 148`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 49,
  "sellIn": 1,
}
`;

exports[`Gilded Rose should foo 149`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 50,
  "sellIn": 1,
}
`;

exports[`Gilded Rose should foo 150`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 51,
  "sellIn": 1,
}
`;

exports[`Gilded Rose should foo 151`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 0,
  "sellIn": 5,
}
`;

exports[`Gilded Rose should foo 152`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 1,
  "sellIn": 5,
}
`;

exports[`Gilded Rose should foo 153`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 49,
  "sellIn": 5,
}
`;

exports[`Gilded Rose should foo 154`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 50,
  "sellIn": 5,
}
`;

exports[`Gilded Rose should foo 155`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 51,
  "sellIn": 5,
}
`;

exports[`Gilded Rose should foo 156`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 0,
  "sellIn": 6,
}
`;

exports[`Gilded Rose should foo 157`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 1,
  "sellIn": 6,
}
`;

exports[`Gilded Rose should foo 158`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 49,
  "sellIn": 6,
}
`;

exports[`Gilded Rose should foo 159`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 50,
  "sellIn": 6,
}
`;

exports[`Gilded Rose should foo 160`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 51,
  "sellIn": 6,
}
`;

exports[`Gilded Rose should foo 161`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 0,
  "sellIn": 7,
}
`;

exports[`Gilded Rose should foo 162`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 1,
  "sellIn": 7,
}
`;

exports[`Gilded Rose should foo 163`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 49,
  "sellIn": 7,
}
`;

exports[`Gilded Rose should foo 164`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 50,
  "sellIn": 7,
}
`;

exports[`Gilded Rose should foo 165`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 51,
  "sellIn": 7,
}
`;

exports[`Gilded Rose should foo 166`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 0,
  "sellIn": 10,
}
`;

exports[`Gilded Rose should foo 167`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 1,
  "sellIn": 10,
}
`;

exports[`Gilded Rose should foo 168`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 49,
  "sellIn": 10,
}
`;

exports[`Gilded Rose should foo 169`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 50,
  "sellIn": 10,
}
`;

exports[`Gilded Rose should foo 170`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 51,
  "sellIn": 10,
}
`;

exports[`Gilded Rose should foo 171`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 0,
  "sellIn": 11,
}
`;

exports[`Gilded Rose should foo 172`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 1,
  "sellIn": 11,
}
`;

exports[`Gilded Rose should foo 173`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 49,
  "sellIn": 11,
}
`;

exports[`Gilded Rose should foo 174`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 50,
  "sellIn": 11,
}
`;

exports[`Gilded Rose should foo 175`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 51,
  "sellIn": 11,
}
`;

exports[`Gilded Rose should foo 176`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 0,
  "sellIn": 12,
}
`;

exports[`Gilded Rose should foo 177`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 1,
  "sellIn": 12,
}
`;

exports[`Gilded Rose should foo 178`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 49,
  "sellIn": 12,
}
`;

exports[`Gilded Rose should foo 179`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 50,
  "sellIn": 12,
}
`;

exports[`Gilded Rose should foo 180`] = `
Item {
  "name": "Sulfuras, Hand of Ragnaros",
  "quality": 51,
  "sellIn": 12,
}
`;
